--- a/s3.css
+++ b/s3.css
@@ -21,7 +21,7 @@ display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    background-color: #41444e;
+    background-color: #141415;
     margin: 0;
     width: 960px;
     max-width: 1200px;
@@ -34,7 +34,7 @@ display: flex;
     padding-bottom: 90px;
     border-radius: 8px;
     width: 45%;
-    color: #959ccf;
+    color: #663939;
     font-family: "Open Sans", "Arial", sans-serif;
 }
 
@@ -45,7 +45,7 @@ flex: 2;
     padding: 20px;
     border-radius: 8px;
     width: 45%;
-    color: #959ccf;
+    color: #663939;
     font-family: "Open Sans", "Arial", sans-serif;
 }
 
@@ -53,6 +53,14 @@ flex: 2;
 font-size: 17px;
 font-weight: bold;
 
+}
+
+.description h1 {
+    color: #9a5353;
+}
+
+.description2 h1 {
+    color: #9a5353;
 }
 
 @media (max-width: 1000px) {
